--- a/app/partials/directives/savedStates.html
+++ b/app/partials/directives/savedStates.html
@@ -1,4 +1,4 @@
-<div class="overwrite-state modal fade" id="overwriteStateModal" tabindex="-1" role="dialog" aria-hidden="true">
+<div class="overwrite-state modal fade neon-popup" id="overwriteStateModal" tabindex="-1" role="dialog" aria-hidden="true">
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
@@ -20,7 +20,7 @@
     </div>
 </div>
 
-<div class="save-new-state modal fade" id="saveNewStateModal" tabindex="-1" role="dialog" aria-hidden="true">
+<div class="save-new-state modal fade neon-popup" id="saveNewStateModal" tabindex="-1" role="dialog" aria-hidden="true">
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
@@ -51,7 +51,7 @@
     </div>
 </div>
 
-<div class="load-state modal fade" id="loadStateModal" tabindex="-1" role="dialog" aria-hidden="true">
+<div class="load-state modal fade neon-popup" id="loadStateModal" tabindex="-1" role="dialog" aria-hidden="true">
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
@@ -74,7 +74,7 @@
     </div>
 </div>
 
-<div class="delete-state modal fade" id="deleteStateModal" tabindex="-1" role="dialog" aria-hidden="true">
+<div class="delete-state modal fade neon-popup" id="deleteStateModal" tabindex="-1" role="dialog" aria-hidden="true">
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
