NEON-1842 Added unshared filters to the visualizations that did not have them.

--- a/app/css/directives/linechart.less
+++ b/app/css/directives/linechart.less
@@ -229,6 +229,10 @@
 
                         &.chart-options-col-wide {
                             width: 250px;
+
+                            .col-half {
+                                width: 50%;
+                            }
                         }
 
                         &.btn-group {
