--- a/app/css/directives/map.less
+++ b/app/css/directives/map.less
@@ -120,6 +120,10 @@
 
                                 &.layer-options-col-wide {
                                     width: 250px;
+
+                                    .col-half {
+                                        width: 50%;
+                                    }
                                 }
 
                                 &.btn-group {
