--- a/app/partials/directives/circularHeatForm.html
+++ b/app/partials/directives/circularHeatForm.html
@@ -1,5 +1,5 @@
 <div class="header-container" ng-show="!(hideHeader)">
-    <div class="title header-text pull-left" ng-bind="(bindTitle != undefined) ? bindTitle : options.table.prettyName + (options.dateField.prettyName ? ' / ' + options.dateField.prettyName : '')"></div>
+    <div class="title header-text pull-left" ng-bind="generateTitle()"></div>
 
     <options-menu parent-element="element" export-function="makeCircularHeatFormExportObject" ng-show="!(hideAdvancedOptions)">
         <div class="form-group" ng-show="!(hideAdvancedOptions)">
@@ -7,15 +7,36 @@
             <select class="form-control" ng-model="options.database" ng-options="database.prettyName for database in databases" ng-required="true" ng-disabled="(databases.length < 2)" ng-change="updateTables()">
             </select>
         </div>
+
         <div class="form-group" ng-show="!(hideAdvancedOptions)">
             <label>Table</label>
             <select class="form-control" ng-model="options.table" ng-options="table.prettyName for table in tables" ng-required="true" ng-disabled="(tables.length < 2)" ng-change="updateFields()">
             </select>
         </div>
+
         <div class="form-group" ng-show="!(hideAdvancedOptions)">
             <label>Date Field</label>
-            <select class="form-control" ng-model="options.dateField" ng-options="field.prettyName for field in fields" ng-required="true" ng-disabled="(fields.length == 0)" ng-change="updateDateField()">
+            <select class="form-control" ng-model="options.dateField" ng-options="field.prettyName for field in fields" ng-required="true" ng-disabled="(fields.length == 0)" ng-change="handleChangeDateField()">
             </select>
+        </div>
+
+        <div class="form-group" ng-show="!(hideAdvancedOptions)">
+            <label>Unshared Filter</label>
+            <select class="form-control" ng-model="options.filterField" ng-required="false" ng-disabled="!(fields.length > 0)" ng-options="field.prettyName for field in fields" ng-change="handleChangeUnsharedFilterField()">
+                <option selected value="">None</option>
+            </select>
+
+            <div class="input-group">
+                <input type="text" class="form-control" placeholder="{{'Filter for ' + options.filterField.prettyName + '...'}}" ng-model="options.filterValue" ng-disabled="!(options.filterField.columnName)">
+                <div class="input-group-btn">
+                    <button type="button" class="btn btn-default refresh" title="Remove Unshared Filter" ng-disabled="(options.filterField.columnName == undefined || options.filterValue == '')" ng-click="handleRemoveUnsharedFilter()">
+                        <span class="glyphicon glyphicon-remove"></span>
+                    </button>
+                    <button type="button" class="btn btn-default refresh" title="Set Unshared Filter" ng-click="handleChangeUnsharedFilterValue()">
+                        <span class="glyphicon glyphicon-refresh"></span>
+                    </button>
+                </div>
+            </div>
         </div>
     </options-menu>
 </div>
