--- a/app/partials/directives/countby.html
+++ b/app/partials/directives/countby.html
@@ -4,26 +4,26 @@
     <options-menu parent-element="element" export-function="makeCountByExportObject" button-text="optionsMenuButtonText" show-button-text="showOptionsMenuButtonText">
         <div class="form-group" ng-show="!(hideAdvancedOptions)">
             <label>Database</label>
-            <select class="form-control" ng-model="active.database" ng-options="database.prettyName for database in databases" ng-required="true" ng-disabled="(databases.length < 2)" ng-change="handleDatabaseChange()">
+            <select class="form-control" ng-model="active.database" ng-options="database.prettyName for database in databases" ng-required="true" ng-disabled="(databases.length < 2)" ng-change="handleChangeDatabase()">
             </select>
         </div>
 
         <div class="form-group" ng-show="!(hideAdvancedOptions)">
             <label>Table</label>
-            <select class="form-control" ng-model="active.table" ng-options="table.prettyName for table in tables" ng-required="true" ng-disabled="(tables.length < 2)" ng-change="handleTableChange()">
+            <select class="form-control" ng-model="active.table" ng-options="table.prettyName for table in tables" ng-required="true" ng-disabled="(tables.length < 2)" ng-change="handleChangeTable()">
             </select>
         </div>
 
         <div class="form-group" ng-show="!(hideAdvancedOptions)">
             <label>Group Field</label>
-            <select class="form-control" ng-model="active.dataField" ng-required="true" ng-disabled="!(fields.length > 0)" ng-options="field.prettyName for field in fields" ng-change="handleDataFieldChange()">
+            <select class="form-control" ng-model="active.dataField" ng-required="true" ng-disabled="!(fields.length > 0)" ng-options="field.prettyName for field in fields" ng-change="handleChangeDataField()">
                 <option disabled selected value="">Please choose a field</option>
             </select>
         </div>
 
         <div class="form-group" ng-show="!(hideAdvancedOptions)">
             <label>Aggregation</label>
-            <select class="form-control" ng-model="active.aggregation" ng-required="true" ng-disabled="!(fields.length > 0)" ng-change="handleAggregationChange()">
+            <select class="form-control" ng-model="active.aggregation" ng-required="true" ng-disabled="!(fields.length > 0)" ng-change="handleChangeAggregation()">
                 <option value="count">Count</option>
                 <option value="min">Minimum</option>
                 <option value="max">Maximum</option>
@@ -32,27 +32,8 @@
 
         <div class="form-group" ng-show="!(hideAdvancedOptions) && (active.aggregation !== 'count')">
             <label>Aggregation Field</label>
-            <select class="form-control" ng-model="active.aggregationField" ng-required="true" ng-disabled="!(fields.length > 0)" ng-options="field.prettyName for field in fields" ng-change="handleAggregationFieldChange()">
+            <select class="form-control" ng-model="active.aggregationField" ng-required="true" ng-disabled="!(fields.length > 0)" ng-options="field.prettyName for field in fields" ng-change="handleChangeAggregationField()">
             </select>
-        </div>
-
-        <div class="form-group" ng-show="!(hideAdvancedOptions)">
-            <label>Unshared Filter</label>
-            <select class="form-control" ng-model="active.filterField" ng-required="false" ng-disabled="!(fields.length > 0)" ng-options="field.prettyName for field in fields" ng-change="handleUnsharedFilterFieldChange()">
-                <option selected value="">None</option>
-            </select>
-
-            <div class="input-group">
-                <input type="text" class="form-control" placeholder="{{'Filter for ' + active.filterField.prettyName + '...'}}" ng-model="active.filterValue" ng-disabled="!(active.filterField.columnName)">
-                <div class="input-group-btn">
-                    <button type="button" class="btn btn-default refresh" title="Remove Unshared Filter" ng-click="handleUnsharedFilterRemove()">
-                        <span class="glyphicon glyphicon-remove"></span>
-                    </button>
-                    <button type="button" class="btn btn-default refresh" title="Set Unshared Filter" ng-click="handleUnsharedFilterValueChange()">
-                        <span class="glyphicon glyphicon-refresh"></span>
-                    </button>
-                </div>
-            </div>
         </div>
 
         <div class="form-group">
@@ -60,7 +41,26 @@
             <div class="input-group">
                 <input type="number" min="1" class="form-control" ng-model="active.limit" required>
                 <div class="input-group-btn">
-                    <button type="button" class="btn btn-default refresh" title="Refresh" ng-click="handleLimitChange()">
+                    <button type="button" class="btn btn-default refresh" title="Refresh" ng-click="handleChangeLimit()">
+                        <span class="glyphicon glyphicon-refresh"></span>
+                    </button>
+                </div>
+            </div>
+        </div>
+
+        <div class="form-group" ng-show="!(hideAdvancedOptions)">
+            <label>Unshared Filter</label>
+            <select class="form-control" ng-model="active.filterField" ng-required="false" ng-disabled="!(fields.length > 0)" ng-options="field.prettyName for field in fields" ng-change="handleChangeUnsharedFilterField()">
+                <option selected value="">None</option>
+            </select>
+
+            <div class="input-group">
+                <input type="text" class="form-control" placeholder="{{'Filter for ' + active.filterField.prettyName + '...'}}" ng-model="active.filterValue" ng-disabled="!(active.filterField.columnName)">
+                <div class="input-group-btn">
+                    <button type="button" class="btn btn-default refresh" title="Remove Unshared Filter" ng-disabled="(active.filterField.columnName == undefined || active.filterValue == '')" ng-click="handleRemoveUnsharedFilter()">
+                        <span class="glyphicon glyphicon-remove"></span>
+                    </button>
+                    <button type="button" class="btn btn-default refresh" title="Set Unshared Filter" ng-click="handleChangeUnsharedFilterValue()">
                         <span class="glyphicon glyphicon-refresh"></span>
                     </button>
                 </div>
