--- a/app/partials/directives/linechart.html
+++ b/app/partials/directives/linechart.html
@@ -78,8 +78,18 @@
 
                         <div class="form-group chart-options-col" ng-show="options.newChart.aggregation !== 'count'" ng-class="{true: '', false: 'has-error'}[options.newChart.attrY.columnName !== '']">
                             <label>Agg. Field</label>
-                            <select class="form-control" ng-model="options.newChart.attrY" ng-options="field.prettyName for field in fields" ng-required="true" ng-disabled="!(fields.length > 0)" ng-change="validateChart()">
+                            <select class="form-control" ng-model="options.newChart.attrY" ng-required="false" ng-disabled="!(fields.length > 0)" ng-options="field.prettyName for field in fields" ng-change="validateChart()">
                             </select>
+                        </div>
+
+                        <div class="form-group chart-options-col chart-options-col-wide">
+                            <label>Unshared Filter</label>
+                            <div class="input-group">
+                                <select class="form-control col-half" ng-model="options.newChart.filterField" ng-required="false" ng-disabled="!(fields.length > 0)" ng-options="field.prettyName for field in fields">
+                                    <option selected value="">None</option>
+                                </select>
+                                <input type="text" class="form-control col-half" placeholder="{{'Filter for ' + options.newChart.filterField.prettyName + '...'}}" ng-model="options.newChart.filterValue" ng-disabled="!(options.newChart.filterField.columnName)">
+                            </div>
                         </div>
                     </div>
 
@@ -175,8 +185,18 @@
 
                                 <div class="form-group chart-options-col" ng-show="chart.aggregation !== 'count'" ng-class="{true: '', false: 'has-error'}[chart.attrYField.columnName !== '']">
                                     <label>Agg. Field</label>
-                                    <select class="form-control" ng-model="chart.attrYField" ng-options="field.prettyName for field in chart.fields" ng-required="true" ng-change="validateChart(chart, $index)" ng-disabled="!(fields.length > 0)">
+                                    <select class="form-control" ng-model="chart.attrYField" ng-required="false" ng-disabled="!(fields.length > 0)" ng-options="field.prettyName for field in chart.fields" ng-change="validateChart(chart, $index)">
                                     </select>
+                                </div>
+
+                                <div class="form-group chart-options-col chart-options-col-wide">
+                                    <label>Unshared Filter</label>
+                                    <div class="input-group">
+                                        <select class="form-control col-half" ng-model="chart.filterField" ng-required="false" ng-disabled="!(fields.length > 0)" ng-options="field.prettyName for field in chart.fields">
+                                            <option selected value="">None</option>
+                                        </select>
+                                        <input type="text" class="form-control col-half" placeholder="{{'Filter for ' + chart.filterField.prettyName + '...'}}" ng-model="chart.filterValue" ng-disabled="!(chart.filterField.columnName)">
+                                    </div>
                                 </div>
                             </div>
                         </div>
