NEON-1920 Initial work to transition to the use of abstract visualization superclasses.  Created the Single Table Visualization directive and changed the Visualization Widget and Aggregation Table to work with it.

--- a/client/app/app.less
+++ b/client/app/app.less
@@ -440,6 +440,7 @@
 @import "../components/poweredByNeon/poweredByNeon.less";
 @import "../components/sample/sample.less";
 @import "../components/scatterPlot/scatterPlot.less";
+@import "../components/singleTableVisualization/singleTableVisualization.less";
 @import "../components/sunburstChart/sunburstChart.less";
 @import "../components/textCloud/textCloud.less";
 @import "../components/timeline/timeline.less";
